Basic merge sort version

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
    <link rel="manifest" href="/site.webmanifest">
    <link rel="stylesheet" href="index.css">
    <script src="https://cdn.tailwindcss.com"></script>
+   <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.css" rel="stylesheet" />
    <script src="language-colors.js"></script>
    <script src="original-data.js"></script>
    <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -45,9 +46,16 @@
             </div>
          </div>
       </div>
-      <div class="mt-8 sm:pl-12">
-         <button id="sort-button" type="button" onclick="onClickSortButton()" class="text-white bg-gradient-to-br from-purple-600 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-purple-700 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">Sort</button>
-   
+      <div class="mt-2 mb-10 sm:pl-12 grid justify-items-start items-end" style="grid-template-columns: min-content min-content">
+         <button id="sort-button" type="button" onclick="onClickSortButton()" class="inline mr-4 text-white bg-gradient-to-br from-purple-600 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-purple-700 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Sort</button>
+         <div class="w-40">
+            <label for="algorithm" class="block mb-1.5 text-sm font-medium text-white invisible" hidden>Choose an algorithm</label>
+            <select id="algorithms" class="border text-sm rounded-lg block w-full p-2.5 bg-gray-700 border-gray-600 placeholder-gray-400 text-white focus:ring-blue-500 focus:border-blue-500">
+               <option value="insertion-sort">Insertion Sort</option>
+               <option value="merge-sort">Merge Sort</option>
+            </select>
+         </div>
+
       </div>
    </div>
 
@@ -410,15 +418,25 @@
    }
 
    const sortButton = document.getElementById("sort-button")
+   const algorithms = document.getElementById("algorithms")
    sortButton.onclick = () => {
       if (isSorting) {
          setSortButton();
          reset();
+         algorithms.classList.remove("invisible")
       } else {
          isSorting = true;
          sortButton.innerText = "Reset"
          sortButton.classList.add("from-blue-500", "focus:ring-blue-800")
-         insertionSort();
+         algorithms.classList.add("invisible")
+         switch (algorithms.value) {
+            case "insertion-sort":
+               insertionSort();
+               break;
+            case "merge-sort":
+               mergeSort();
+               break;
+         }
       }
    }
 
@@ -452,6 +470,81 @@
          await sleep(getClockSpeed());
          key = set(j + 1, key)
       }
+   }
+
+   async function mergeSort() {
+      await mergeSortHelper(0, divs.length - 1);
+   }
+
+   async function mergeSortHelper(left, right) {
+      if (left < right) {
+         const mid = Math.floor((left + right) / 2);
+         await mergeSortHelper(left, mid);
+         await mergeSortHelper(mid + 1, right);
+         await merge(left, mid, right);
+      }
+   }
+
+   async function merge(left, mid, right) {
+      if (!isSorting) {
+         return;
+      }
+      const leftSize = mid - left + 1;
+      const rightSize = right - mid;
+      divs[mid].classList.add("anchor")
+      const leftArr = [];
+      const rightArr = [];
+      for (let i = 0; i < leftSize; i++) {
+         leftArr.push(divs[left + i]);
+      }
+      for (let i = 0; i < rightSize; i++) {
+         rightArr.push(divs[mid + 1 + i]);
+      }
+      let i = 0;
+      let j = 0;
+      let k = left;
+      while (i < leftSize && j < rightSize) {
+         if (!isSorting) {
+            return;
+         }
+         const leftStarCount = parseInt(leftArr[i].getAttribute("stargazers-count"));
+         const rightStarCount = parseInt(rightArr[j].getAttribute("stargazers-count"));
+         if (leftStarCount >= rightStarCount) {
+            const newLeft = set(k, leftArr[i]);
+            newLeft.classList.add("comparison")
+            i++;
+         } else {
+            const newRight = set(k, rightArr[j]);
+            newRight.classList.add("comparison")
+            j++;
+         }
+         k++;
+         await sleep(getClockSpeed());
+         divs[k - 1].classList.remove("comparison")
+      }
+      while (i < leftSize) {
+         if (!isSorting) {
+            return;
+         }
+         const newLeft = set(k, leftArr[i]);
+         newLeft.classList.add("comparison")
+         i++;
+         k++;
+         await sleep(getClockSpeed());
+         newLeft.classList.remove("comparison")
+      }
+      while (j < rightSize) {
+         if (!isSorting) {
+            return;
+         }
+         const newRight = set(k, rightArr[j]);
+         newRight.classList.add("comparison")
+         j++;
+         k++;
+         await sleep(getClockSpeed());
+         newRight.classList.remove("comparison")
+      }
+      divs[mid].classList.remove("anchor")
    }
 
    // Returns a cloned repo item with the star bar and profile picture replaced
@@ -534,5 +627,6 @@
       }
    }
    </script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.js"></script>
 </body>
 </html>
