Add in name with link to bottom of project

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
          </div>
       </div>
-      <div class="mt-2 mb-10 sm:pl-12 grid justify-items-start items-end" style="grid-template-columns: min-content min-content">
+      <div class="mt-2 mb-24 sm:pl-12 grid justify-items-start items-end" style="grid-template-columns: min-content min-content">
          <button id="sort-button" type="button" onclick="onClickSortButton()" class="inline mr-4 text-white bg-gradient-to-br from-purple-600 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-purple-700 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Sort</button>
          <div class="w-36">
             <label for="algorithm" class="block mb-1.5 text-sm font-medium text-white invisible" hidden>Choose an algorithm</label>
@@ -57,7 +57,11 @@
                <option value="heap-sort">Heap Sort</option>
             </select>
          </div>
-
+      </div>
+      <div class="text-gray-100 flex sm:pl-12 justify-start lg:justify-end mb-10 text-sm">
+         <span>
+            Project by <a class="underline" href="https://www.linkedin.com/in/aidando">Aidan Do</a>
+         </span>
       </div>
    </div>
 
