Fix favicons with GitHub pages

--- a/index.html
+++ b/index.html
@@ -4,20 +4,18 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Sorting Visualizer of Sorting Visualizer</title>
-   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=2">
-   <link rel="icon" type="image/png" sizes="32x32" href="/favicon.ico?v=16">
-   <link rel="icon" href="/icon.svg?v=10" type="image/svg+xml">
-   <link rel="manifest" href="/site.webmanifest">
-   <link rel="stylesheet" href="dist/output.css">
+   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png?">
+   <link rel="icon" type="image/png" sizes="32x32" href="favicon.ico?">
+   <link rel="icon" href="icon.svg?" type="image/svg+xml">
+   <link rel="manifest" href="site.webmanifest">
+   <link rel="stylesheet" href="output.css">
    <script src="language-colors.js"></script>
-   <script src="load-data.js"></script>
    <script src="env-vars.js"></script>
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body class="bg-gray-950 flex justify-center">
-
    <div id="main-content" class="bg-gray-950 rounded-lg sm:p-6 mt-8 inline-flex flex-col items-stretch hidden">
       <div class="sm:pl-12 mb-8">
          <div class="inline-flex flex-col items-stretch">
@@ -749,6 +747,5 @@
    }
 
    </script>
-   <script src="node_modules/flowbite/dist/flowbite.min.js"></script>
 </body>
 </html>
