Make screen size suitable for 768px height screens

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="mb-4 header-border"></div>
          </div>
       </div>
-      <div id="repository-view" class="sm:pl-12 pr-0.5 mb-2 flex justify-start lg:justify-end h-52 items-start break-all sm:break-normal">
+      <div id="repository-view" class="sm:pl-12 pr-0.5 mb-2 flex justify-start lg:justify-end h-52 lg:h-40 items-start break-all sm:break-normal">
 
       </div>
       <div class="flex items-center justify-center">
@@ -406,7 +406,7 @@
             return 100
             break;
          case '2xl':
-            return 150
+            return 100
             break;
       }
    }
