Tweak flare out colors

--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@
    /**
     * Highlights the full graph with the gradient motif
     */
-   const FLARE_START = "#9333ea";
+   const FLARE_START = "#cd94ff";
    const FLARE_END = "#93c5fd";
    async function flare() {
       for (let i = 0; i < divs.length; i++) {
